[package]
name = "serveur"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = {version = "1.0", features = ["full"]}
serde = {version = "1.0", features = ["derive"]}
sha2 = "0.10.8"
hex = "0.4.3"
ed25519-dalek = {version = "2.1.1", features = ["rand_core"]}
rsa = {version = "0.9.6", features = ["sha2"]}
rand = "0.8.5"