[package]
name = "serveur"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = {version = "1.0", features = ["full"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.128"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
hex = "0.4.3"
ed25519-dalek = {version = "2.1.1", features = ["rand_core"]}
rand = "0.8.5"
cryptoki = "0.7.0"