[package]
name = "send"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.0", features = ["full"]}
serde = {version = "1.0.210",  features = ["derive"]}
serde_json = "1.0.128"
reqwest = {version = "0.12.8", features = ["json"]}
rand = "0.8.5"
x25519-dalek = {version = "2.0.1", features = ["static_secrets"]}
xeddsa = "1.0.2"
hkdf = "0.12.4"
sha2 = "0.10.8"
hex = "0.4.3"
aes-gcm = "0.10.3"